# BLog

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  sandbox.cpp
include/BLog/: blog.hpp  colors.hpp
src/: blog.cpp  colors.cpp
